--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "umi dev",
-    "build": "umi build",
-    "postinstall": "umi setup",
-    "setup": "umi setup",
+    "dev": "max dev",
+    "build": "max build",
+    "postinstall": "max setup",
+    "setup": "max setup",
     "start": "npm run dev"
   },
   "dependencies": {
@@ -14,21 +14,21 @@
     "@ant-design/plots": "^1.2.6",
     "@ant-design/pro-components": "^2.6.0",
     "@umijs/plugin-model": "^2.6.2",
-    "@umijs/plugins": "^4.4.11",
     "antd": "^5.0.0",
     "axios": "^1.6.0",
     "classnames": "^2.3.0",
     "lodash": "^4.17.0",
     "moment": "^2.29.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "umi": "^4.0.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@umijs/fabric": "^4.0.0",
+    "@umijs/max": "^4.4.11",
+    "@umijs/plugins": "^4.4.11",
     "cross-env": "^7.0.0",
     "eslint": "^8.0.0",
     "typescript": "^5.0.0"
